# requests-cache-pyinstaller

./: .gitignore  README.md  pyinstaller_entry.py  pyproject.toml  requests-cache-pyinstaller.spec
requests_cache_pyinstaller/: main.py  mainwindow.ui
